--- a/conf/resources/reportes/recupero/factura1.html
+++ b/conf/resources/reportes/recupero/factura1.html
@@ -195,7 +195,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -284,7 +284,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -374,7 +374,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -462,7 +462,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -550,7 +550,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
                          <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -638,7 +638,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
                          <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
