--- a/conf/resources/reportes/recupero/factura2.html
+++ b/conf/resources/reportes/recupero/factura2.html
@@ -230,7 +230,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -319,7 +319,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -409,7 +409,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -499,7 +499,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -587,7 +587,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -676,7 +676,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -764,7 +764,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
                          <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -852,7 +852,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
                          <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -940,7 +940,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
                          <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
