--- a/conf/resources/reportes/recupero/factura.html
+++ b/conf/resources/reportes/recupero/factura.html
@@ -156,7 +156,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -245,7 +245,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
 						 <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
@@ -333,7 +333,7 @@
                      </div>
                  </td>
                  <td style="width: 50%;border-left: 2px solid;border-left-width: 2px;text-align: center">
-                     <h1>RECIBO</h1>
+                     <h1>FACTURA</h1>
                      <div style="text-align: left;margin-left:25px;">
                          <b>Punto de Venta:</b> <span class="pv"></span> &nbsp;&nbsp;&nbsp;<b>Comp. Nro: </b><span class="numeroFactura"></span><br>
                          <b>Fecha de Emisión:</b>  <span class="fecha_emision"></span><br>
