--- a/conf/resources/reportes/recupero/factura.html
+++ b/conf/resources/reportes/recupero/factura.html
@@ -178,7 +178,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -267,7 +267,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -355,7 +355,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
