--- a/conf/resources/reportes/recupero/factura2.html
+++ b/conf/resources/reportes/recupero/factura2.html
@@ -252,7 +252,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -341,7 +341,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -431,7 +431,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -521,7 +521,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -609,7 +609,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -698,7 +698,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -786,7 +786,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -874,7 +874,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -962,7 +962,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
