--- a/conf/resources/reportes/recupero/nc.html
+++ b/conf/resources/reportes/recupero/nc.html
@@ -171,7 +171,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 30%;padding-left:25px;">
-                         <b>CUIT:</b><span class="cuit"></span><br>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
                      <td style="width: 70%;;padding-left:25px;">
                          <b>Razón Social:</b> <span class="razon_social"></span><br>
@@ -278,7 +278,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 30%;padding-left:25px;">
-                         <b>CUIT:</b><span class="cuit"></span><br>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
                      <td style="width: 70%;;padding-left:25px;">
                          <b>Razón Social:</b> <span class="razon_social"></span><br>
@@ -357,7 +357,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 30%;padding-left:25px;">
-                         <b>CUIT:</b><span class="cuit"></span><br>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
                      <td style="width: 70%;;padding-left:25px;">
                          <b>Razón Social:</b> <span class="razon_social"></span><br>
