--- a/conf/resources/reportes/recupero/nd.html
+++ b/conf/resources/reportes/recupero/nd.html
@@ -172,7 +172,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 30%;padding-left:25px;">
-                         <b>CUIT:</b><span class="cuit"></span><br>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
                      <td style="width: 70%;;padding-left:25px;">
                          <b>Razón Social:</b> <span class="razon_social"></span><br>
@@ -279,7 +279,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 30%;padding-left:25px;">
-                         <b>CUIT:</b><span class="cuit"></span><br>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
                      <td style="width: 70%;;padding-left:25px;">
                          <b>Razón Social:</b> <span class="razon_social"></span><br>
@@ -358,7 +358,7 @@
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 30%;padding-left:25px;">
-                         <b>CUIT:</b><span class="cuit"></span><br>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
                      <td style="width: 70%;;padding-left:25px;">
                          <b>Razón Social:</b> <span class="razon_social"></span><br>
