--- a/conf/resources/reportes/recupero/factura1.html
+++ b/conf/resources/reportes/recupero/factura1.html
@@ -217,7 +217,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -306,7 +306,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -396,7 +396,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -484,7 +484,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -572,7 +572,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
@@ -660,7 +660,7 @@
                          <b>Razón Social:</b> <span class="razon_social"></span>
                      </td>
                      <td style=" ;">
-                         <b>CUIT:</b><span class="cuit"></span>
+                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
                      </td>
 
                  </tr>
