--- a/conf/resources/reportes/recupero/factura1.html
+++ b/conf/resources/reportes/recupero/factura1.html
@@ -213,29 +213,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -302,29 +290,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -392,29 +368,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -480,29 +444,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -568,29 +520,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -656,29 +596,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
