--- a/conf/resources/reportes/recupero/factura2.html
+++ b/conf/resources/reportes/recupero/factura2.html
@@ -248,29 +248,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -337,29 +325,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -427,29 +403,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -517,29 +481,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -605,29 +557,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -694,29 +634,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -782,29 +710,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -870,29 +786,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
@@ -958,29 +862,17 @@
              <table style="width: 100%">
                  <tbody>
                  <tr>
-                 	 <td style=" ;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span>
-                     </td>
-                     <td style=" ;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-
-                 </tr>
+                 	 <td style=" ;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span></td>
+                     <td><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+				 </tr>
                  <tr>
-                     <td colspan="2" style="padding-left:25px;">
-                         <b>Domicilio:</b><span class="direccion"></span>
-                     </td>
-
-                 </tr>
+                     <td colspan="2" style="padding-left:25px;"><b>Domicilio:</b><span class="direccion"></span></td>
+				 </tr>
                  <tr>
-                 	 <td style="padding-left:25px;">
-						<b>Condición frente al IVA:</b> <span class="ivaa"></span>
-					</td>
-                     <td style=" ">
-                         <b>Condición de venta:</b> <span class="tipo_pago"></span>
-                     </td>
+                 	 <td style="padding-left:25px;"><b>Condición frente al IVA:</b> <span class="ivaa"></span></td>
+                     <td style=" "><b>Condición de venta:</b> <span class="tipo_pago"></span></td>
                  </tr>
-             </tbody>
+             	 </tbody>
              </table>
 		</div>
 
