--- a/conf/resources/reportes/recupero/nc.html
+++ b/conf/resources/reportes/recupero/nc.html
@@ -169,16 +169,13 @@
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
-                 <tbody><tr>
-                     <td style="width: 30%;padding-left:25px;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-                     <td style="width: 70%;;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span><br>
-                     </td>
+                 <tbody>
+                 <tr>
+                     <td style="width: 30%;padding-left:25px;"><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+                     <td style="width: 70%;;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span><br></td>
                  </tr>
-
-             </tbody></table>
+			     </tbody>
+             </table>
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
@@ -276,16 +273,13 @@
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
-                 <tbody><tr>
-                     <td style="width: 30%;padding-left:25px;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-                     <td style="width: 70%;;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span><br>
-                     </td>
+             	<tbody>
+                 <tr>
+                     <td style="width: 30%;padding-left:25px;"><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+                     <td style="width: 70%;;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span><br></td>
                  </tr>
-
-             </tbody></table>
+			     </tbody>
+             </table>
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
@@ -355,16 +349,13 @@
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
-                 <tbody><tr>
-                     <td style="width: 30%;padding-left:25px;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-                     <td style="width: 70%;;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span><br>
-                     </td>
+             	<tbody>
+                 <tr>
+                     <td style="width: 30%;padding-left:25px;"><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+                     <td style="width: 70%;;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span><br></td>
                  </tr>
-
-             </tbody></table>
+			     </tbody>
+             </table>
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
