--- a/conf/resources/reportes/recupero/nd.html
+++ b/conf/resources/reportes/recupero/nd.html
@@ -170,16 +170,13 @@
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
-                 <tbody><tr>
-                     <td style="width: 30%;padding-left:25px;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-                     <td style="width: 70%;;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span><br>
-                     </td>
+                 <tbody>
+                 <tr>
+                     <td style="width: 30%;padding-left:25px;"><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+                     <td style="width: 70%;;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span><br></td>
                  </tr>
-
-             </tbody></table>
+				 </tbody>
+             </table>
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
@@ -277,16 +274,13 @@
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
-                 <tbody><tr>
-                     <td style="width: 30%;padding-left:25px;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-                     <td style="width: 70%;;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span><br>
-                     </td>
+                 <tbody>
+                 <tr>
+                     <td style="width: 30%;padding-left:25px;"><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+                     <td style="width: 70%;;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span><br></td>
                  </tr>
-
-             </tbody></table>
+				 </tbody>
+             </table>
              <table style="width: 100%">
                  <tbody><tr>
                      <td style="width: 50%;;padding-left:25px;">
@@ -356,16 +350,13 @@
          </div>
          <div class="border_div info_factura">
              <table style="width: 100%">
-                 <tbody><tr>
-                     <td style="width: 30%;padding-left:25px;">
-                         <b><span class="cuittitulo"></span></b><span class="cuit"></span><br>
-                     </td>
-                     <td style="width: 70%;;padding-left:25px;">
-                         <b>Razón Social:</b> <span class="razon_social"></span><br>
-                     </td>
+                 <tbody>
+                 <tr>
+                     <td style="width: 30%;padding-left:25px;"><b><span class="cuittitulo"></span></b><span class="cuit"></span><br></td>
+                     <td style="width: 70%;;padding-left:25px;"><b>Razón Social:</b> <span class="razon_social"></span><br></td>
                  </tr>
-
-             </tbody></table>
+				 </tbody>
+             </table>
              <table style="width: 100%">
                  <tbody><tr>
                      <<td style="width: 50%;;padding-left:25px;">
