--- a/conf/resources/reportes/recupero/factura.html
+++ b/conf/resources/reportes/recupero/factura.html
@@ -151,7 +151,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
                      </div>
                  </td>
@@ -228,7 +228,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
 						 <b>Condición frente al IVA:</b> IVA EXENTO
                      </div>
                  </td>
@@ -304,7 +304,7 @@
 
                      <div style="text-align: left;margin-left:5px;padding-bottom:15px;">
                          <b>Razón Social:</b> PARQUE DE LA SALUD DE LA PROVINCIA DE MISIONES DR RAMON MADARIAGA LEY XVII-<br>
-                         <b>Domicilio comercial:</b> Av. Marconi 3736 - Posadas Misiones<br>
+                         <b>Domicilio comercial:</b> <span class="pvdireccion"></span><br>
                          <b>Condición frente al IVA:</b> IVA EXENTO
                      </div>
                  </td>
